# wetland_v

./: LICENSE  README.md  Tutorial.ipynb  crawl_trace_with_ground_filters.py  ndbi.html  pyproject.toml  surface_plot.html
.ipynb_checkpoints/: Tutorial-checkpoint.ipynb
assets/: clientside.js  swipe.js
notebooks/: Tutorial.ipynb
notebooks/.ipynb_checkpoints/: Tutorial-checkpoint.ipynb
root/: ndbi.html
src/lidar_depo/: crawl.py  crs.py  dem.py  usgs_3dep.py
src/wetland_v/: __init__.py  aoi.py  crawl_trace.py  data.py  get_years.py  lidar.py  pdal_pipeline.py  plot.py  sampling.py
src/wetland_v.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_crs.py  test_dem.py
