[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wetland_v"
version = "0.1.0"
description = "Geospatial + LiDAR utilities (3DEP/PDAL, CRS transforms, DEM tools)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Jaweed Nazary" }]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyproj>=3.6",
  "requests>=2.31",
  "matplotlib>=3.7",
  "plotly>=5.18",
  "rich>=13.0",
]

[project.optional-dependencies]
lidar = [
  "laspy>=2.5",
  "pdal>=3.4",
]
raster = [
  "rasterio>=1.3"]
  
speed = ["numba>=0.59"]

dev = [
  "pytest>=7",
  "ruff>=0.5",
  "black>=24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
